# mcp-mock-server

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml  mcp_server.py  pyproject.toml  server.py
agents/: agent.py  agent_server.py  fastagent.config.yaml
db/: db_server.py  milvus_init.py  oracle_init.py  oracle_schema.py
db/config/: settings.py
mcp_servers/: types.py
mcp_servers/config/: settings.py
mcp_servers/db/: database.py  oracle.py
mcp_servers/resources/: app_status.py
mcp_servers/tools/query/: milvus_search.py  oracle_query.py
mcp_servers/tools/search/: duckduckgo_search.py  google_search.py  web_content_fetch.py
mcp_servers/tools/weather/: open_weather_map.py
utils/: rate_limiter.py
